fix(tabs): wrap on too little space

--- a/packages/tabs/src/tabs.pcss
+++ b/packages/tabs/src/tabs.pcss
@@ -11,6 +11,7 @@
     border-bottom: var(--tab-list-border-bottom) solid
       var(--sds-color-layout-divider-subtle);
     display: flex;
+    flex-wrap: wrap;
     margin-bottom: var(--sds-space-gap-small);
   }
 
